# news-deframer-mining

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  test_miner.py  trend_docs.duckdb
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: duckdb.md
miner/: config.py  logger.py  main.py  miner.py  postgres.py  test_postgres.py
news_deframer/: __init__.py  config.py  duckdb_store.py  logger.py  miner.py  models.py  netutil.py  nlp.py  poller.py  postgres.py  spacy_models.py
news_deframer/cli/: __init__.py  download_models.py  miner.py
news_deframer/database/: __init__.py  postgres.py
news_deframer/miner/: __init__.py  miner.py  poller.py
sql/: count.sql  create_view_trend_metrics.sql  how_does_xyz_trend.sql  how_does_xyz_trend_scaling.sql  intersect_and_blindspots.sql  view_comparison.sql  view_context.sql  view_domain_comparison.sql  view_domain_comparison_limit.sql  view_domain_context.sql  view_domain_lifecyle.sql  view_domain_top_trends.sql  view_lifecyle.sql  view_query.sql  view_top_trends.sql  view_trend_metrics_by_domain.sql  what_is_trending.sql  what_is_trending_at_n.sql  what_is_trending_n_v.sql
sql/old/: intersect_and_blindspots_n.sql  what_is_trending_at_n.sql  what_is_trending_at_n_v.sql  what_is_trending_n.sql
tests/: test_cli_miner.py  test_database_postgres.py  test_duckdb_store.py  test_miner.py  test_mining.py  test_netutil.py  test_nlp.py  test_poller.py  test_postgres.py
