[project]
name = "news-deframer-mining"
version = "0.1.0"
description = "News Deframer Trend Mining Modules"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "numpy>=2.0,<3.0",
    "psycopg2-binary",
    "pydantic-settings",
    "pyarrow",
    "python-dotenv",
    "publicsuffix2",
    "spacy>=3.8.0,<3.10.0",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl"
]

[project.scripts]
miner-cli = "news_deframer.cli.miner:main"
download-models = "news_deframer.models:install_models"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "mypy",
    "types-psycopg2",
    "de-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.8.0/de_core_news_lg-3.8.0-py3-none-any.whl",
    "fr-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_lg-3.8.0/fr_core_news_lg-3.8.0-py3-none-any.whl",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["news_deframer*"]
